system/cloudnative-pg/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metrics
  namespace: cnpg-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: monitoring.otelcol-gateway
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webhook
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: cloudnative-pg
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
